BACK_obtener_alimentos: Obtener listado de alimentos.