@@ -2,7 +2,6 @@ package com.nutritrack.nutritrack.alimento.controller;
 
 import com.nutritrack.nutritrack.alimento.api.AlimentoApi;
 import com.nutritrack.nutritrack.alimento.api.response.AlimentoResponse;
-import com.nutritrack.nutritrack.alimento.entity.Alimento;
 import com.nutritrack.nutritrack.alimento.mapper.AlimentoMapper;
 import com.nutritrack.nutritrack.alimento.service.AlimentoService;
 import lombok.AllArgsConstructor;
@@ -12,7 +11,6 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/alimentos")
@@ -31,10 +29,6 @@ public class AlimentoController implements AlimentoApi {
     @Override
     @GetMapping
     public ResponseEntity<List<AlimentoResponse>> findAll() {
-        List<Alimento> alimentos = alimentoService.findAll();
-        List<AlimentoResponse> responseList = alimentos.stream()
-                .map(AlimentoResponse::fromEntity)
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(responseList);
+        return ResponseEntity.ok(alimentoService.findAll().stream().map(alimentoMapper::toAlimentoResponse).toList());
     }
 }
